--- a/less/harrysLessCompiled.less
+++ b/less/harrysLessCompiled.less
@@ -241,7 +241,7 @@ header {
 }
 
 section {
-    padding: 100px 0;
+    padding: 60px 0;
     h2 {
     	margin: 0;
     	font-size: 3em;
@@ -320,7 +320,7 @@ section.success {
 	color: white;
 	font-size: 20px;
 	border: solid 2px white;
-	background: transparent;
+	background: transpapadding: 60px 0;nt;
 	transition: all 0.3s ease-in-out;
 	margin-top: 15px;
 	&:hover,
