--- a/css/owl-carousel-theme.css
+++ b/css/owl-carousel-theme.css
@@ -51,3 +51,17 @@
 .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
   background: #869791;
 }
+
+
+
+@media(max-width:768px) {
+  .carousel-detail p {
+    display:  none;
+  }
+  .carousel-title h3 {
+    font-size: 19px;
+  }
+  .owl-item {
+    padding: 0px !important;
+  }
+}
