--- a/less/harrysLessCompiled.less
+++ b/less/harrysLessCompiled.less
@@ -5,7 +5,11 @@
 // will remove on release
 
 body {
-	overflow-x: hidden;
+   min-width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 p {
@@ -78,13 +82,26 @@ hr.star-primary:after {
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
           border-radius: 6px;
-  background: rgba(255, 255, 255, 0);
-  border: 2px solid white;
-  color: white;
+
+
   font-size: 14px;
   height: 41px;
   padding: 7px 0px 7px;
   width: 105px;
+}
+.btn-register {
+    background: rgba(255, 255, 255, 0);
+  border: 2px solid white;
+  color: white;
+}
+.send-btn {
+    margin-left:50px;
+
+}
+
+.register-jumbotron {
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 .bg {
@@ -181,6 +198,15 @@ header {
   }
 }
 
+.speakers-text {
+  padding-top:50px;
+}
+
+.email-text {
+  text-decoration: underline;
+  color: #919CFF;
+}
+
 @media(min-width:768px) {
 	header {
 		.container {
@@ -192,6 +218,37 @@ header {
       font-weight: 100;
 		}
 	}
+  .register-jumbotron {
+    padding-left: 150px !important;
+    padding-right: 150px !important;
+  }
+}
+
+
+@media(max-width:768px) {
+  header {
+    .intro-text {
+      font-size: 1.5em;
+      font-weight: 100;
+    }
+    .intro-strapline {
+      padding-right: 0;
+      padding-left: 0;
+      padding-top: 10px;
+    }
+    .img-logo-heading {
+      width: 80%;
+    }
+
+  }
+}
+
+@media(max-width:500px) {
+  header {
+    .img-logo-heading {
+      content:url("../img/logo.png");
+    }
+  }
 }
 
 
