--- a/less/harrysLessCompiled.less
+++ b/less/harrysLessCompiled.less
@@ -5,19 +5,27 @@
 // will remove on release
 
 body {
-   min-width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
+  min-width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 p {
 	font-size: 20px;
 }
 
-p.small {
-	font-size: 16px;
+#schedule {
+  .container {
+    h4 {
+      padding: 20px;
+      background: #eee;
+      width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
 }
 
 a,
@@ -74,10 +82,6 @@ hr.star-primary:after {
     color: @brand-primary;
 }
 
-.img-centered {
-	margin: 0 auto;
-}
-
 .btn {
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
@@ -90,13 +94,12 @@ hr.star-primary:after {
   width: 105px;
 }
 .btn-register {
-    background: rgba(255, 255, 255, 0);
+  background: rgba(255, 255, 255, 0);
   border: 2px solid white;
   color: white;
 }
 .send-btn {
     margin-left:50px;
-
 }
 
 .register-jumbotron {
@@ -137,11 +140,7 @@ header {
 		display: block;
 		margin: 0 auto 0;
 	}
-  .img-logo {
-    padding-top: 50px;
-    width: 9%;
-    padding-right: 5px;
-  }
+
   .img-logo-heading {
     width: 60%;
   }
@@ -319,60 +318,6 @@ section.success {
 	}
 }
 
-#sponsors {
-    .sponsors-item {
-        margin: 0 0 15px;
-        right: 0;
-        .sponsors-link {
-            display: block;
-            position: relative;
-            max-width: 400px;
-            margin: 0 auto;
-            .caption {
-                background: fade(@brand-success, 90%);
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                opacity: 0;
-                transition: all ease 0.5s;
-                -webkit-transition: all ease 0.5s;
-                -moz-transition: all ease 0.5s;
-                &:hover {
-                    opacity: 1;
-                }
-                .caption-content {
-                    position: absolute;
-                    width: 100%;
-                    height: 20px;
-                    font-size: 20px;
-                    text-align: center;
-                    top: 50%;
-                    margin-top: -12px;
-                    color: white;
-                    i {
-                        margin-top: -12px;
-                    }
-                    h3,
-                    h4 {
-                        margin: 0;
-                    }
-                }
-            }
-        }
-    }
-    * {
-        z-index: 2;
-    }
-}
-
-@media(min-width:767px) {
-    #sponsors {
-        .sponsors-item {
-            margin: 0 0 30px;
-        }
-    }
-}
-
 .btn-outline {
 	color: white;
 	font-size: 20px;
@@ -500,97 +445,8 @@ form .row:first-child .floating-label-form-group {
 
 }
 
-
-.btn-social {
-	display: inline-block;
-	height: 50px;
-	width: 50px;
-	border: 2px solid white;
-	border-radius: 100%;
-	text-align: center;
-	font-size: 20px;
-	line-height: 45px;
-}
-
 .btn:focus,
 .btn:active,
 .btn.active {
 	outline: none;
-}
-
-.scroll-top {
-    position: fixed;
-    right: 2%;
-    bottom: 2%;
-    width: 50px;
-    height: 50px;
-    z-index: 1049;
-    .btn {
-    	font-size: 20px;
-	    width: 50px;
-	    height: 50px;
-	    border-radius: 100%;
-	    line-height: 28px;
-	    &:focus {
-	    	outline: none;
-	    }
-    }
-}
-
-.sponsors-modal {
-	.modal-content {
-	    border-radius: 0;
-	    background-clip: border-box;
-	    -webkit-box-shadow: none;
-	    box-shadow: none;
-	    border: none;
-	    min-height: 100%;
-	    padding: 100px 0;
-	    text-align: center;
-		h2 {
-	    	margin: 0;
-	    	font-size: 3em;
-		}
-		img {
-			margin-bottom: 30px;
-		}
-		.item-details {
-			margin: 30px 0;
-		}
-	}
-    .close-modal {
-        position: absolute;
-        width:75px;
-        height:75px;
-        background-color:transparent;
-        top: 25px;
-        right: 25px;
-        cursor: pointer;
-        &:hover {
-            opacity: 0.3;
-        }
-        .lr {
-            height:75px;
-            width:1px;
-            margin-left:35px;
-            background-color:@brand-primary;
-            transform: rotate(45deg);
-            -ms-transform: rotate(45deg);
-            /* IE 9 */
-            -webkit-transform: rotate(45deg);
-            /* Safari and Chrome */
-            z-index:1051;
-            .rl {
-                height:75px;
-                width:1px;
-                background-color:@brand-primary;
-                transform: rotate(90deg);
-                -ms-transform: rotate(90deg);
-                /* IE 9 */
-                -webkit-transform: rotate(90deg);
-                /* Safari and Chrome */
-                z-index:1052;
-            }
-        }
-    }
 }
