Added FB, Ggl, Twit meta tags and media-pack.

--- a/less/harrysLessCompiled.less
+++ b/less/harrysLessCompiled.less
@@ -16,6 +16,18 @@ p {
 	font-size: 20px;
 }
 
+
+.media-pack {
+  text-decoration: underline;
+  color: #919CFF;
+  font-size: 15px;
+}
+
+#navbar-collapse {
+  background-color: @brand-success;
+  border-bottom: solid 1px #333;
+}
+
 #schedule {
   .container {
     h4 {
@@ -316,6 +328,19 @@ section.success {
 	section.first {
 		padding-top: 75px;
 	}
+
+  #schedule .container h4 {
+    width: 250px;
+  }
+
+  .panel_head2 h3 {
+    font-size: 1px !important;
+  }
+
+  .register-jumbotron {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 .btn-outline {
