--- a/css/harrysLessCompiled.css
+++ b/css/harrysLessCompiled.css
@@ -8,6 +8,15 @@ body {
 p {
   font-size: 20px;
 }
+.media-pack {
+  text-decoration: underline;
+  color: #919CFF;
+  font-size: 15px;
+}
+#navbar-collapse {
+  background-color: #222222;
+  border-bottom: solid 1px #333;
+}
 #schedule .container h4 {
   padding: 20px;
   background: #eee;
@@ -255,6 +264,16 @@ section.success {
   }
   section.first {
     padding-top: 75px;
+  }
+  #schedule .container h4 {
+    width: 250px;
+  }
+  .panel_head2 h3 {
+    font-size: 1px !important;
+  }
+  .register-jumbotron {
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 .btn-outline {
