--- a/less/style.less
+++ b/less/style.less
@@ -195,6 +195,12 @@ hr.star-primary:after {
 .register-jumbotron {
   padding-left: 5%;
   padding-right: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
+
+  h3 {
+    padding-bottom: 20px;
+  }
 }
 
 .bg {
